--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
-    "build:client": "/client npm run build",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && /client npm install && npm run build:client "
+    "build:client": "./client npm run build",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
