--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run client\" \"npm run server\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www",
-    "build:client": "./client npm run build",
-    "heroku-postbuild": "NODE_ENV=PRODUCTION NPM_CONFIG_PRODUCTION=false npm install"
+    "start:dev": "nodemon ./bin/www",
+    "build:client": "./client npm run build"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
